<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263565">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="144dp"
        android:layout_height="70dp"
        android:fontFamily="sans-serif"
        android:text="@string/Ativos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="111dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="84dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp">

        <ImageView
            android:id="@+id/icmoeda"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/bitcoin"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/view_valor_"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:backgroundTint="@android:color/white"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:text="@string/valor_investido_em_r"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp">

        <ImageView
            android:id="@+id/icquatidade"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/quant_moedas"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/view_quantidade_"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:backgroundTint="@android:color/white"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:text="@string/quantidade_da_moeda"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp">

        <ImageView
            android:id="@+id/icdata"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/calendar"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/view_data_"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:backgroundTint="@android:color/white"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp"
            tools:text="@string/data"
            tools:ignore="MissingConstraints"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp">

        <ImageView
            android:id="@+id/icvalorizar"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/crescimento"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/view_valorizacao_"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:backgroundTint="@android:color/white"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:text="@string/valorizacao"
            tools:visibility="visible" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif"
        android:text="@string/excluir"
        android:backgroundTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

</androidx.constraintlayout.widget.ConstraintLayout>